--- a/template.Rmd
+++ b/template.Rmd
@@ -10,6 +10,9 @@ output: github_document
 
 ```{r}
 library(tidyverse)
+library(readr)
+library(readxl)
+library(haven)
 ```
 
 let's import the "._FAS_litters.csv" csv.
@@ -41,7 +44,7 @@ pups_df <- read.csv("data/data_import_examples/data_import_examples/FAS_pups.csv
 ```
 
 ```{r}
-#pups_df_abs <- read.csv("/Users/rl607/OneDrive/Documents/data_science_I/P8105_data_wrangling_i/data_import_examples/FAS_pups.csv")
+pups_df_abs <- read.csv("/Users/rl607/OneDrive/Documents/data_science_I/P8105_data_wrangling_i/data/data_import_examples/data_import_examples/FAS_pups.csv")
 ```
 
 
@@ -67,5 +70,74 @@ str(litters_df)
 
 
 skimr::skim(litters_df)
+```
+
+
+
+
+
+
+
+```{r}
+litter_df =
+  read_csv(
+    "data/data_import_examples/data_import_examples/FAS_litters.csv",
+    skip = 10, 
+    na = c("NA",19)
+  )
+```
+
+
+
+```{r, eval=FALSE}
+litter_df = 
+  read_csv(
+    "data/data_import_examples/data_import_examples/FAS_litters.csv",
+    col_types = 
+      cols(
+        Group = col_factor(
+        ))
+    
+```
+
+
+
+
+```{r}
+mlb_df = 
+  read_excel("data/data_import_examples/data_import_examples/mlb11.xlsx")
+mlb_df
+```
+
+
+
+import a SAS file.
+
+
+```{r}
+pulse_df = read_sas("data/data_import_examples/data_import_examples/public_pulse_data.sas7bdat")
+```
+
+
+# Base R
+
+```{r, eval=FALSE}
+litters_df = 
+  read.csv("data/data_import_examples/data_import_examples/FAS_litters.csv")
+```
+
+
+
+```{r}
+litters_df_clean <- 
+  read_csv("data/data_import_examples/data_import_examples/FAS_litters.csv")
+
+litters_df_cleaned = 
+  
+  janitor::clean_names(litters_df)
+
+
+
+write.csv(litters_df_cleaned)
 ```
 
